feat(models): updating models api
